--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit
-streamlit-webrtc
-mediapipe
-opencv-python-headless
-numpy
+streamlit>=1.28.0
+streamlit-webrtc>=0.44.0
+opencv-python-headless>=4.8.0
+numpy>=1.24.0
+mediapipe>=0.10.0
+av>=10.0.0
+pygame>=2.5.0
