--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ streamlit>=1.28.0
 streamlit-webrtc>=0.44.0
 opencv-python-headless>=4.8.0
 numpy>=1.24.0
-mediapipe>=0.10.0
+mediapipe==0.9.3.0
 av>=10.0.0
 pygame>=2.5.0
+Pillow>=9.0.0
