--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit>=1.28.0
-streamlit-webrtc>=0.44.0
-opencv-python-headless>=4.8.0
-numpy>=1.24.0
+streamlit==1.28.1
+streamlit-webrtc==0.44.0
+opencv-python-headless==4.8.1.78
+numpy==1.24.3
 mediapipe==0.9.3.0
-av>=10.0.0
-pygame>=2.5.0
-Pillow>=9.0.0
+av==10.0.0
+Pillow==10.0.0
